# minisumo-sneak100

./: .gitignore  .gitmodules  README.md
docs/: list_jacktronic.txt  list_jacktronic_2.txt  next_version_whislist.txt  parts_list2.txt  parts_list3.txt  software_division.txt  stm32_hardware_list.txt
docs/diagrams/: sneak100_core_fsm.drawio  sneak100_software.drawio
docs/others/: SNEAK100_live_sensor_values.pixil  blade.txt  list_jacktronic.txt  next_version_whislist.txt  sneak100_live_values_all.pixil
hardware/sneak100_main_board/: Sneak100_kicad.lib  controller.sch  controller.sch-bak  fp-info-cache  fp-lib-table  interface.sch  interface.sch-bak  lineSennsors.sch  lineSennsors.sch-bak  memory.sch  memory.sch-bak  motors.sch  motors.sch-bak  power.sch  power.sch-bak  proximitySensors.sch  proximitySensors.sch-bak  sneak100_main_board-cache.lib  sneak100_main_board.kicad_pcb  sneak100_main_board.kicad_pcb-bak  sneak100_main_board.pro  sneak100_main_board.sch  sneak100_main_board.sch-bak  sym-lib-table  uController.sch-bak
hardware/sneak100_main_board/gerber/: sneak100_main_board-B_Cu.gbr  sneak100_main_board-B_Mask.gbr  sneak100_main_board-B_Paste.gbr  sneak100_main_board-B_SilkS.gbr  sneak100_main_board-Edge_Cuts.gbr  sneak100_main_board-F_Cu.gbr  sneak100_main_board-F_Mask.gbr  sneak100_main_board-F_Paste.gbr  sneak100_main_board-F_SilkS.gbr  sneak100_main_board.drl  sneak100_main_board_V1.0_gerber.rar  sneak100_main_board_V1.1_gerber.rar  sneak100_main_board_gerber.rar
hardware/sneak100_main_board/sneak100_lib.pretty/: DRV8835_hand_solder.kicad_mod  ESP2010_90.kicad_mod  S9V11F5_module.kicad_mod  SSD1306_module.kicad_mod  SSD1306_module_screw.kicad_mod
hardware/sneak100_main_board_v2/: Sneak100_kicad.kicad_sym  Sneak100_kicad.lib  fp-info-cache  fp-lib-table  line_board.kicad_sch  motors.kicad_sch  perfs.kicad_sch  power.kicad_sch  proximity.kicad_sch  sneak100_main_board_v2.kicad_pcb  sneak100_main_board_v2.kicad_prl  sneak100_main_board_v2.kicad_pro  sneak100_main_board_v2.kicad_sch  sym-lib-table  ucontroller.kicad_sch
hardware/sneak100_main_board_v2/sneak100_lib.pretty/: DRV8835_hand_solder.kicad_mod  ESP2010_90.kicad_mod  S9V11F5_module.kicad_mod
mechanics/: Sneak100_Zeta.iam
mechanics/ElectricElements/: 20NK_3-50CM.ipt  Dip_switch_4.ipt  FemaleHeaderPin_1x3.iam  FemaleHeaderPin_1x4.iam  FemaleHeaderPin_1x5.iam  FemaleHeaderPin_1x6_90.iam  FemaleHeaderPin_2x3_90.iam  FemaleHederPin_2_90.ipt  FemaleHederPin_90.ipt  HC-05.ipt  HC-05_module.iam  IR_TSAL6400.ipt  KITR0711S.ipt  LiPO_2S_58x32x10.ipt  MainBoard.ipt  MainModule.iam  MaleHeaderPin.ipt  MaleHeaderPin_1x2.iam  MaleHeaderPin_1x2_90.iam  MaleHeaderPin_1x4.iam  MaleHeaderPin_1x5.iam  MaleHeaderPin_1x6_90.iam  MaleHeaderPin_90.ipt  OPE5594A.ipt  PinHeaderJumper.ipt  QTR1A.iam  QTR1A_Board.ipt  S9V11F5.ipt  SFH313FA.ipt  SSD1306.ipt  STM32F303RE_LQFP64.ipt  SensorBoard.ipt  StartModule.iam  StartModuleBoard.ipt  Switch_ESP2010_90.ipt  TSOP312.ipt  TSOP4838.ipt  TactSwitch_6x6_8mm_SMD.ipt  WS2812b_SMD.ipt  ZS-040.ipt  (+1 more)
mechanics/MechanicalElements/: BatteryPlate.ipt  HullBottom.ipt  HullMid.ipt  HullTop.ipt  LineSensorPlate.ipt  MotorMountTest.ipt  ProximaCustomCaseFront.ipt  WeightBack.ipt  WeightFront.ipt  proxima_case.ipt
mechanics/MirroredParts/: HullMid_MIR.ipt
mechanics/ModyfiedParts/: HM_Knife_cut.ipt
mechanics/PreMadeParts/: 2M_Nut.ipt  3M_Nut.ipt  Battery[45x24x21].ipt  Battery[54x30_5x17_5].ipt  Battery[72x25x19].ipt  Battery[72x36x19].ipt  BistateSwitch_7x7mm_THT.ipt  CNY70.ipt  DistanceRing_4mm.ipt  Distance_M3_20.ipt  Distance_M3_30.ipt  FemaleHeaderPin_1x2.iam  FemaleHeaderPin_1x6.iam  FemaleHederPin.ipt  HM_Knife.ipt  IDC_10_pin_connector.ipt  Led_0603.ipt  M2_Short_Bolt.ipt  M3_Long_Bolt.ipt  M3_Short_Bolt.ipt  M3_Smaller_Bolt.ipt  MaleHeaderPin_1x3.iam  Pololu_Encoder.ipt  Pololu_EncoderMagnes.ipt  Pololu_MicroMotor.ipt  Pololu_MotorEncoderModule.iam  QTR1A.iam  Solarbotics_RW2i.ipt  TEFT4300.ipt  TactSwitch_6x6_10mm_THT.ipt
mechanics/stl_files/version_1/: BatteryPlate.stl  HullBottom.stl  HullMid.stl  HullMid_MIR.stl  HullTop.stl
mechanics/stl_files/version_2/: HullBottom.stl  MotorMountTest.stl
mechanics/stl_files/version_3_26_02_2022/: BatteryPlate.stl  HM_Knife_cut.stl  HullBottom.stl  HullMid.stl  HullMid_test02.gcode  HullTop.stl  LineSensorPlate.stl  LineSensorPlate_text06.gcode  Line_test07.gcode  Line_test08.gcode  (+2 more)
software-rtos/: CMakeLists.txt
software-rtos/app/cli/inc/: cli.h  cli_apps.h  uart2.h  uart3.h
software-rtos/app/cli/src/: cli.c  cli_apps.c  uart2.c  uart3.c
software-rtos/app/core/inc/: FreeRTOSConfig.h  adc.h  i2c1.h  motors.h  periph.h  rc5.h  robot.h  sensors.h  servos.h
software-rtos/app/core/src/: adc.c  i2c1.c  main.c  motors.c  periph.c  rc5.c  robot.c  sensors.c  servos.c
software-rtos/app/fight/inc/: fight.h  main_sm.h  robot.h
software-rtos/app/fight/src/: fight.c  main_sm.c  robot.c
software-rtos/app/gui/inc/: display.h  display_fonts.h  gui.h  sprites.h
software-rtos/app/gui/src/: display.c  display_fonts.c  gui.c  sprites.c
software-rtos/cli/inc/: cli.h  cli_apps.h  uart3.h
software-rtos/cli/src/: cli.c  uart3.c
software-rtos/code/inc/: config.h
software-rtos/code/src/: config.c  main.c
software-rtos/core/inc/: FreeRTOSConfig.h  config.h
software-rtos/core/src/: config.c  i2c1.c  main.c
software/nucleo_f411_lib_test2/: .cproject  .mxproject  nucleo_f411_lib_test2 Debug.launch  nucleo_f411_lib_test2.ioc
software/nuclueo_f411_lib_test/: .cproject  .mxproject  .project  nucleo_f411_lib_test Debug.launch  nucleo_f411_lib_test.ioc
software/proximity_sensor_test/: proximity_sensor_test.ino
software/sneak100_f405_software_test/: .cproject  .mxproject  .project  sneak100_f405_software_test Debug.launch  sneak100_f405_software_test.ioc
software/sneak100_f405_software_test2/: .cproject  .mxproject  .project  sneak100_f405_software_test2 Debug.launch  sneak100_f405_software_test2.ioc
software/sneak100_software_test/: .cproject  .mxproject  .project  sneak100_software_test Debug.launch  sneak100_software_test.ioc
(+311 files in other folders)
